azure-vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: azure-vote-back
labels:
app: azure-vote-back
spec:
replicas: 1
selector:
matchLabels:
app: azure-vote-back
template:
metadata:
labels:
app: azure-vote-back
spec:
containers:
- name: azure-vote-back
image: redis:6.0
ports:
- containerPort: 6379

apiVersion: v1
kind: Service
metadata:
name: azure-vote-back
spec:
selector:
app: azure-vote-back
ports:

port: 6379
targetPort: 6379

apiVersion: apps/v1
kind: Deployment
metadata:
name: azure-vote-front
labels:
app: azure-vote-front
spec:
replicas: 1
selector:
matchLabels:
app: azure-vote-front
template:
metadata:
labels:
app: azure-vote-front
spec:
containers:
- name: azure-vote-front
# Replace this with your own image if needed
image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
ports:
- containerPort: 80
value: "azure-vote-back"

apiVersion: v1
kind: Service
metadata:
name: azure-vote-front
spec:
type: LoadBalancer
selector:
app: azure-vote-front
ports:

port: 80
targetPort: 80
